--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,9 @@
 name = "schemas-lib"
 version = "0.0.1"
 dependencies = [
-    "pydantic ==2.11.7",
-    "email-validator ==2.2.0",
-    "pydantic-settings ==2.10.1"
+    "aiokafka==0.12.0",
+    "avro-python3==1.10.2",
+    "httpx==0.28.1",
 ]
 
 [build-system]
@@ -12,8 +12,4 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = [
-    "schemas_lib", 
-    "schemas_lib.auth_service",
-    "schemas_lib.paste_service",
-]
+packages = []
