--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,6 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = []
+packages = [
+    "eventhub"
+]
