--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ dependencies = [
     "avro-python3==1.10.2",
     "httpx==0.28.1",
     "pydantic==2.11.7",
-    "email-validator ==2.2.0",
+    "email-validator==2.2.0",
+    "pydantic-settings==2.10.1",
 ]
 
 [build-system]
