--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,6 @@ dependencies = [
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-packages = [
-    "eventhub",
-    "eventhub.auth"
-    "eventhub.auth.jwt",
-    "eventhub.avro",
-    "eventhub.confluent",
-    "eventhub.kafka.consumer",
-    "eventhub.kafka.producer",
-]
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["eventhub*"]
